[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/default_font.tres" type="DynamicFont" id=2]

[node name="MainMenu" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 443.0
margin_top = 238.0
margin_right = 581.0
margin_bottom = 362.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 131.0
margin_bottom = 117.0
custom_constants/separation = 8

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 124.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "Exit Game"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 124.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 44.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="MusicToggle" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 124.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
pressed = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/MusicToggle" to="." method="_on_MusicToggle_toggled"]
